@@ -1,3 +1,7 @@
+2010-05-14 04:37-EDT Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* TerminalView.m: Correct sign issues with some pointer casts.
+
 2010-05-14 Riccardo Mottola <rmottola@users.sf.net>
 
 	* ServicesPrefs.m:
